# opengeni

./: .dockerignore  .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  UPGRADE_LOG.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  result  tsconfig.base.json
agent/crates/opengeni-agent/: Cargo.toml
agent/crates/opengeni-agent-platform/: Cargo.toml
agent/crates/opengeni-agent-platform/src/: cgroup.rs  desktop.rs  error.rs  lib.rs  linux.rs  macos.rs  native.rs  pty.rs  service.rs  virtual_desktop.rs  windows.rs
agent/crates/opengeni-agent-proto/: Cargo.toml  build.rs
agent/crates/opengeni-agent-proto/examples/: gen_fixtures.rs
agent/crates/opengeni-agent-proto/src/: corpus.rs  lib.rs
agent/crates/opengeni-agent-stream/: Cargo.toml
agent/crates/opengeni-agent-stream/src/: backoff.rs  channel.rs  codec.rs  error.rs  framebuffer_pump.rs  hub.rs  lib.rs  pty_pump.rs  transport.rs
agent/crates/opengeni-agent-update/: Cargo.toml
agent/crates/opengeni-agent-update/src/: apply.rs  error.rs  lib.rs  manifest.rs  target.rs  verify.rs
agent/crates/opengeni-agent-update/tests/: flow.rs
agent/crates/opengeni-agent/src/: backoff.rs  cli.rs  config.rs  dispatch.rs  engine.rs  enrollment.rs  job.rs  legacy.rs  main.rs  metrics.rs  ops.rs  overrides.rs  service.rs  status.rs  supervisor.rs  uninstall.rs  update.rs
agent/crates/opengeni-relay/: Cargo.toml  Dockerfile
agent/crates/opengeni-relay/scripts/: mint-fixtures.ts
agent/crates/opengeni-relay/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  registry.rs  ring.rs  server.rs  token.rs
agent/crates/opengeni-relay/tests/: cross_stack_token.rs  relay_e2e.rs
apps/api/: CHANGELOG.md  package.json  pyproject.toml  tsup.config.ts
apps/api/scripts/: proveit-selfhosted-staging.ts
apps/api/src/: app.ts  codex-redemption-security.ts  dependencies.ts  github-access.ts  github-browser-flow.ts  index.ts  model-catalog.ts  observability.ts
apps/api/src/access/: index.ts
apps/api/src/auth/: managed-auth.ts
apps/api/src/billing/: limits.ts
apps/api/src/cloud_agent_api/: __init__.py  __main__.py  app.py  cli.py
apps/api/src/domain/: capabilities.ts  resources.ts  scheduled-tasks.ts  sessions.ts
apps/api/src/http/: auth.ts  common.ts  sse.ts
apps/api/src/infra_agent_api/: __init__.py  __main__.py  app.py  cli.py
apps/api/src/integrations/: oauth-client.ts  provider-domain.ts
apps/api/src/mcp/: documents.ts  server.ts  session-view.ts  toolspace.ts
apps/api/src/routes/: api-keys.ts  billing.ts  capabilities.ts  catalog-assets.ts  codex.ts  connections.ts  documents.ts  durable-waits.ts  enrollments.ts  environments.ts  files.ts  github.ts  install.ts  machines.ts  packs.ts  rigs.ts  scheduled-tasks.ts  sessions.ts  social.ts  transcription.ts  workspace-capture.ts  workspaces.ts
apps/api/src/sandbox/: access.ts  auth-callout.ts  channel-a.ts  enrollment.ts  fleet.ts  machines.ts  metrics-ingestion.ts  rematerialize.ts  routing.ts  viewer.ts
apps/api/test/: app.test.ts  attach-env-git-pointers.test.ts  auth-callout.test.ts  catalog-assets-routes.test.ts  channel-a-routes.test.ts  codex-model-catalog.test.ts  codex-model-guard.test.ts  codex-redemption-routes.test.ts  codex-redemption-security.test.ts  codex-routes.test.ts  codex-usage-routes.test.ts  connections-routes.test.ts  delegated-service-initiator.test.ts  durable-waits-mcp.test.ts  enrollment-deployment-auth.test.ts  enrollment-route-discipline.test.ts  enrollment-routes.test.ts  environments-domain.test.ts  fleet-tools.test.ts  github-binding-disabled.test.ts  github-browser-flow.test.ts  github-capability-health.test.ts  goal-sacred-pause.test.ts  goal-update-idempotency.test.ts  hello-ingestion.test.ts  install.test.ts  limits-codex.test.ts  machine-home-backend.test.ts  machines-routes.test.ts  metrics-ingestion.test.ts  model-catalog.test.ts  new-session-drafts-routes.test.ts  packs-domain.test.ts  relay-dial-base.test.ts  retained-artifacts-routes.test.ts  rig-session-binding.test.ts  rigs-mcp.test.ts  rigs-routes.test.ts  sandbox-access-import-guard.test.ts  sandbox-access.test.ts  (+29 more)
apps/worker/: CHANGELOG.md  package.json  pyproject.toml  tsup.config.ts
apps/worker/scripts/: build-workflow-bundle.ts
apps/worker/src/: activities.ts  activity-agent-segment.ts  activity-common.ts  activity-documents.ts  activity-environment.ts  activity-run-input.ts  activity-scheduled-tasks.ts  activity-session-state.ts  activity-types.ts  concurrency.ts  host-export-pump.ts  host-export.ts  http.ts  index.ts  observability-metrics.ts  op-journal.ts  sandbox-resume.ts  sandbox-routing.ts  turn-persistence-handoff.ts  turn-persistence-reference.ts  worker-service-lifecycle.ts  workflow-wake-contract.ts  workflows.ts
apps/worker/src/activities/: agent-segment.ts  agent-turn.ts  background-jobs.ts  capabilities.ts  codex-capacity.ts  codex-fleet-shadow.ts  codex-rotation.ts  common.ts  context-compaction.ts  (+33 more)
apps/worker/test/: activities-wire.test.ts  agent-turn.test.ts  background-jobs.test.ts  cache-metrics.test.ts  codex-auth.test.ts  codex-billing.test.ts  codex-capacity.test.ts  codex-fleet-shadow.test.ts  codex-history-strip.test.ts  codex-overlay.test.ts  codex-rotation.test.ts  codex-select-account.test.ts  codex-usage-limit.test.ts  concurrency.test.ts  context-compaction-activity.test.ts  desktop-image.e2e.ts  desktop-image.test.ts  display-stack-gating.test.ts  durable-waits.test.ts  embedded-lifecycle.test.ts  git-askpass.test.ts  git-credential-binding.test.ts  git-credential-renewal.test.ts  git-credentials.test.ts  github-mint-selection.test.ts  goals.test.ts  host-export-entrypoint.test.ts  host-export-pump.test.ts  host-mcp-credentials.test.ts  http.test.ts  machine-primary.test.ts  packs.test.ts  parent-wake.test.ts  reaper-terminate-roundtrip.test.ts  recording.test.ts  redaction.test.ts  rig-verification-ownership.test.ts  rig-verification-temporal.integration.ts  rig-verification.test.ts  run-credential-renewal.test.ts  (+28 more)
(+712 files in other folders)
