[project]
name = "infra-agents-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "infra-agent-api",
    "infra-agent-contracts",
    "infra-agent-platform",
    "infra-agent-testing",
    "infra-agent-worker",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4,<2",
    "httpx>=0.28.1,<0.29",
    "mypy>=1.20.1,<2",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.15.11,<0.16",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/infra_agent_contracts",
    "packages/infra_agent_platform",
    "packages/infra_agent_testing",
]

[tool.uv.sources]
infra-agent-api = { workspace = true }
infra-agent-contracts = { workspace = true }
infra-agent-platform = { workspace = true }
infra-agent-testing = { workspace = true }
infra-agent-worker = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["modal.*"]
ignore_missing_imports = true

