[project]
name = "cloud-agent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloud-agent-contracts",
    "cloud-agent-platform",
    "fastapi>=0.136.0,<0.137",
    "uvicorn[standard]>=0.44.0,<0.45",
]

[project.scripts]
cloud-agent-api = "cloud_agent_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_agent_api"]

[tool.uv.sources]
cloud-agent-contracts = { workspace = true }
cloud-agent-platform = { workspace = true }

