[project]
name = "infra-agent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "infra-agent-contracts",
    "infra-agent-platform",
    "fastapi>=0.136.0,<0.137",
    "httpx>=0.28.1,<0.29",
    "uvicorn[standard]>=0.44.0,<0.45",
]

[project.scripts]
infra-agent-cli = "infra_agent_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_agent_api"]

[tool.uv.sources]
infra-agent-contracts = { workspace = true }
infra-agent-platform = { workspace = true }
