[project]
name = "cloud-agent-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloud-agent-contracts",
    "cloud-agent-platform",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_agent_worker"]

[tool.uv.sources]
cloud-agent-contracts = { workspace = true }
cloud-agent-platform = { workspace = true }
