[project]
name = "infra-agent-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "infra-agent-contracts",
    "infra-agent-platform",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_agent_worker"]

[tool.uv.sources]
infra-agent-contracts = { workspace = true }
infra-agent-platform = { workspace = true }
