[package]
name = "opengeni-agent-platform"
description = "Per-OS platform abstraction (exec/fs/git/terminal/desktop/metrics + service manager) for the OpenGeni agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
opengeni-agent-proto = { path = "../opengeni-agent-proto" }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "io-util", "time", "rt", "macros"] }
tracing = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "time"] }
tempfile = { workspace = true }
