[package]
name = "opengeni-agent-update"
description = "Self-update for the OpenGeni agent: signed-manifest discovery, minisign verify, atomic self-replace, and rollback."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
opengeni-agent-proto = { path = "../opengeni-agent-proto" }
