[package]
name = "opengeni-agent"
description = "The OpenGeni self-hosted agent binary: enrollment, dial, RPC dispatch, and the resiliency supervisor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "opengeni-agent"
path = "src/main.rs"

[features]
# Experimental macOS display backend + TCC consent flow. OFF by default, including
# stable releases, until a signed bundle on a live consenting Mac passes the TCC,
# capture/input, relaunch, and full-bundle replacement gates. Forwards to the
# platform crate's feature of the same name so CI can compile/test the
# ScreenCaptureKit/CGEvent source with `--all-features`; that is compatibility
# evidence only, never live-OS acceptance.
macos-desktop = ["opengeni-agent-platform/macos-desktop"]

[dependencies]
opengeni-agent-proto = { path = "../opengeni-agent-proto" }
opengeni-agent-engine = { path = "../opengeni-agent-engine" }
opengeni-agent-platform = { path = "../opengeni-agent-platform" }
opengeni-agent-stream = { path = "../opengeni-agent-stream" }
opengeni-agent-update = { path = "../opengeni-agent-update" }

prost = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "sync",
    "fs",
    "process",
    "io-util",
] }
async-nats = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Enrollment: install keypair + device-flow HTTP client + credential persistence.
ed25519-dalek = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Per-channel output digests in the op-stream Exit frame (byte-exact assembly
# proof, PROTOCOL.md §Wire messages). Already a workspace dep (update cohorting).
blake3 = { workspace = true }

clap = { workspace = true }
hostname = { workspace = true }

# The M10 disk metric (statvfs of the workspace root) — unix-only, SAFE binding.
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
tempfile = { workspace = true }
